--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "testcafe-cra-test",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
-  },
+  "main": "src/electron-starter.js",
+  "electron-dev": "ELECTRON_START_URL=http://localhost:5000 electron .",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "dev": "nf start",
+    "testcafe": "testcafe \"electron:.\" \"./src/e2e/**/*.js\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +22,16 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "dependencies": {
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
+  },
+  "devDependencies": {
+    "electron": "^4.0.7",
+    "foreman": "^3.0.1",
+    "react-scripts": "2.1.5",
+    "testcafe": "^1.1.0",
+    "testcafe-browser-provider-electron": "^0.0.8"
+  }
 }
